--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.6.0
 beautifulsoup4==4.11.2
 certifi==2022.12.7
-cffi==1.15.1
+#cffi==1.15.1
 charset-normalizer==2.1.1
 cryptography==39.0.0
 defusedxml==0.7.1
